# spotrod

./: .gitignore  Makefile  README.md  mcmc.py  pyproject.toml  setup.py  spotrod-python-wrapper.c  spotrod-setup.py  spotrod.c  spotrod.h  spotrod.py  test.py
example/: README.md  kepler_data.py  kepler_download.py  mcmc.py  plot.py
toyproblem/: .gitignore  Makefile  README  README.md  benchmark.py  test.py  toyc-setup.py  toyc-wrapper.c  toyc.c  toyc.h  toycython-setup.py  toycython.c  toycython.pyx  toyproblem presentation.ipynb  toypython.py
